--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,7 @@ body {
   display: inline-flex;
   padding: 4px;
   border-radius: 999px;
-  background: background:#241238;
+  background: #241238;
   box-shadow: 0 12px 25px rgba(42, 8, 80, 0.18);
   gap: 4px;
 }
