--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,7 @@ body {
   padding: 16px 16px 18px;
   box-shadow: 0 18px 45px rgba(24, 1, 53, 0.08);
   margin-bottom: 16px;
+  font-size: 16px; /* or 15px or 16px */
 }
 .step-disabled {
   opacity: 0.38;
