--- a/css/style.css
+++ b/css/style.css
@@ -321,7 +321,7 @@ body {
   background: #fbfaff;
 }
 .upload-area.dragover {
-  background: #000000;
+  background: #f0ebff;
 }
 .upload-icon {
   font-size: 32px;
